# LaiLabNanoV1

./: .gitignore  README.md  SECURITY.md  app.py  build_inference.bat  check.py  convert_command.txt  extract.py  requirements.txt  setup.bat  start.bat
deploy/: Yolo_CSIStream  deploy.md  main.cpp  reset_btn
develop/: Dockerfile  README.md  docker-compose.yml
develop/Projects/: build_all.sh
develop/Projects/Examples/Ethernet-MJPEGStream/: CMakeLists.txt  MJPEGWriter.cpp  MJPEGWriter.h  main.cpp
develop/Projects/Examples/HelloWorld/: main.c
develop/Projects/Examples/OTGCamera/: .gitignore  CMakeLists.txt  README.md  S98reset_btn  Visualizer.pde  esp32_test.h  main.cpp  test_595.sh  test_gpio.sh  test_pull.sh
develop/Projects/Examples/OTGCamera/Antigravity/: QUICKSTART.md  VPSS_DUAL_CHANNEL.md
develop/Projects/Examples/OpenCV_CSI_Camera/libs/: download.sh
develop/Projects/Examples/Simple-MJPEGStream/: main.cpp
develop/Projects/Examples/yolo-MJPEGStream/: CMakeLists.txt  MJPEGWriter.cpp  main.cpp
develop/Projects/GPIO/: Makefile  gpio.h  main.c
develop/Projects/HelloWorld/: Makefile  main.c
develop/Projects/Interfaces/I2C/: Makefile  main.c
develop/Projects/Interfaces/SPI/: Makefile  main.c
develop/Projects/Interfaces/UART/: Makefile  main.c
develop/Projects/Interrupts/: Makefile  main.c
develop/Projects/OTGCamera/: .gitignore  CMakeLists.txt  README.md  S99yolo_camera  deploy.md  main.cpp  reset_btn.cpp
develop/Projects/OTGCamera/archive/: README.md
develop/Projects/OTGCamera/archive/experiments/: run_test.sh
develop/Projects/OTGCamera/archive/legacy_deployment/: yolo_camera.service
develop/Projects/OTGCamera/archive/research_notes/Antigravity/: PERFORMANCE_ANALYSIS.md
develop/Projects/OTGCamera/libs/: download.sh
develop/Projects/OTGCamera/python_client/: README.md  otg_camera_client.py
develop/Projects/OTGCamera/scripts/: build.sh  setup_deps.sh
develop/Projects/OTGCamera/tools/: ethernet_inference_demo.cpp  send_ethernet_frames.py  v4l2_requeue_test.c
develop/Projects/PWM/: Makefile  main.c
python_client/: test_stream.py
static/: app.css  app.html  app.js  i18n.js  index.html  landing.css  landing.js
tests/: test_deploy_modes.py  test_security.py
